Update AuctionServer: change Thread -> Java Thread